--- a/HomeworkWeek10/css/style.css
+++ b/HomeworkWeek10/css/style.css
@@ -1,5 +1,8 @@
 .center {
+    display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* CSS to control the positioning of vis2 */
