--- a/HomeworkWeek10/css/style.css
+++ b/HomeworkWeek10/css/style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 /* CSS to control the positioning of vis2 */
