--- a/DataVisualisation2/css/style.css
+++ b/DataVisualisation2/css/style.css
@@ -33,6 +33,7 @@
 }   
 
 .abc {
+    background-color: rgb(198, 134, 49);
     color:white;
     height:25vh;
     background-image: url("Data/images\ \(1\).png");
